--- a/Src/css/primeiro-setor/papel-de-parede.css
+++ b/Src/css/primeiro-setor/papel-de-parede.css
@@ -1,5 +1,6 @@
 .papel_de_parede {
-    background-image: url(/Imagem/solo\ leveling.gif);
     width: 100%;
     height: 100%;
+    border: 2px solid black;
+    border-radius: 5px;
 }
