mudei coisa pa carai

--- a/Src/css/cabecalho/logo.css
+++ b/Src/css/cabecalho/logo.css
@@ -1,6 +1,5 @@
 .logo_principal {
     height: 3em;
-    margin-left: 2em;
-    margin-top: 0.3em;
+    margin: 0.5em;
     border: 3px solid rgb(2, 2, 2);
 }
