--- a/Src/css/cards-protagonista/descricao-sung.css
+++ b/Src/css/cards-protagonista/descricao-sung.css
@@ -1,8 +1,7 @@
-.descricao {
+.descricao_sung {
     max-height: 80px;
     overflow-y: scroll;
-    font-size: 20px;
+    font-size: 25px;
     padding-right: 10px;
     border-bottom: 2px solid black;
-    text-align: center;
 }
