--- a/Src/css/cards-protagonista/forma-de-luta-do-sung.css
+++ b/Src/css/cards-protagonista/forma-de-luta-do-sung.css
@@ -1,8 +1,8 @@
-.forma_de_luta {
+.forma_de_luta_do_sung {
     margin-right: 2em;
-    border: 2px solid black;
     list-style-type: none;
     padding: 8px;
     border-radius: 10px;
     height: fit-content;
+    font-size: 25px;
 }
