--- a/Src/css/titulo/titulo-principal.css
+++ b/Src/css/titulo/titulo-principal.css
@@ -1,13 +1,8 @@
 .titulo_principal {
     color: white;
-    font-family: handjet;
-    font-size: 4rem;
-    font-weight: 700;
     position: absolute; 
     text-align: center;
-    top: 20%;
-    transform: translate(-50% -50%);
+    top: 20%;;
     width: 100%;
-    text-decoration: underline;
     left: 0;
 }
