--- a/Src/css/cards-protagonista/imagem-png-protagonista.css
+++ b/Src/css/cards-protagonista/imagem-png-protagonista.css
@@ -1,7 +1,6 @@
 .imagem_png_protagonista {
     border: 2px solid white;
-    width: 50em;
-    height: 35em;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
-    width: fit-content;
 }
