--- a/Src/css/cards-protagonista/informacoes-protagonista.css
+++ b/Src/css/cards-protagonista/informacoes-protagonista.css
@@ -1,7 +1,8 @@
 .informacoes_protagonista {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 10px;
+    padding-top: 1em;
 }
 
 .informacoes_protagonista span {
