Só troquei as font

--- a/Src/css/cabecalho/cabecalho.css
+++ b/Src/css/cabecalho/cabecalho.css
@@ -1,6 +1,6 @@
 .cabeçalho {
     display: flex;
     justify-content: space-between;
-    background-color: transparent;
+    background-color: var(--cor-de-fundo);
     border-radius: 5px;
 }
