--- a/Src/css/cards-protagonista/informacoes-protagonista.css
+++ b/Src/css/cards-protagonista/informacoes-protagonista.css
@@ -8,5 +8,5 @@
 .informacoes_protagonista span {
     text-transform: uppercase;
     padding: 5px;
-    font-size: 25px;
+    font-size: 1.09rem;
 }
