--- a/Src/css/bottom/bottom.css
+++ b/Src/css/bottom/bottom.css
@@ -4,7 +4,7 @@
     text-align: center;
     padding: 0.3em;
     border-radius: 5px;
-    font-size: 12px;
+    font-size: 0.7rem;
     margin-top: 1em;
     font-weight: 700;
 }
