--- a/Src/css/cards-protagonista/forma-de-luta-do-sung.css
+++ b/Src/css/cards-protagonista/forma-de-luta-do-sung.css
@@ -4,6 +4,6 @@
     padding: 8px;
     border-radius: 10px;
     height: fit-content;
-    font-size: 25px;
+    font-size: 1.09rem;
     margin-right: 0;
 }
