--- a/Src/css/cards-protagonista/wikipidia-sung.css
+++ b/Src/css/cards-protagonista/wikipidia-sung.css
@@ -3,7 +3,7 @@
     color: white;
     padding: 0.2em;
     border-radius: 5px;
-    font-size: 25px;
+    font-size: 1.09rem;
 }
 
 .wikipidia_sung:hover {
