--- a/Src/css/cards/informacoes/descricao.css
+++ b/Src/css/cards/informacoes/descricao.css
@@ -1,7 +1,7 @@
 .descricao {
     max-height: 80px;
     overflow-y: scroll;
-    font-size: 20px;
+    font-size: 1.4rem;
     padding-right: 10px;
     border-bottom: 2px solid black;
     text-align: center;
