--- a/Src/css/cards/informacoes/wikipidia.css
+++ b/Src/css/cards/informacoes/wikipidia.css
@@ -2,9 +2,9 @@
     text-decoration: none;
     background-color: black;
     color: white;
-    padding: 0.2em;
+    padding: 0.4em;
     border-radius: 5px;
-    font-size: 25px;
+    font-size: 1.09rem;
 }
 
 .wikipidia:hover{
