--- a/Src/css/primeiro-setor/solo.css
+++ b/Src/css/primeiro-setor/solo.css
@@ -3,7 +3,8 @@
     justify-content: center;
     text-decoration: none;
     color: white;
-    font-size: 25px;
+    font-size: 1.09rem;
+    padding: 0.3rem;
 }
 
 .solo:hover {
