--- a/Src/css/body/root.css
+++ b/Src/css/body/root.css
@@ -4,4 +4,5 @@
     --font-principal: 'Handjet';
     --cor-para-destaque: blue;
     --botao-efeito-scale: rgb(196, 196, 201);
+    --cor-de-fundo-cartao: rgb(131, 18, 236);
 }
