--- a/Src/css/cards/cards-familia.css
+++ b/Src/css/cards/cards-familia.css
@@ -1,5 +1,5 @@
 .cards_familia{
-    background-color: black;
+    background-color: var(--cor-de-fundo);
     padding: 1em;
     border-radius: 5px;
 }
